kiso covid info

--- a/public/templates/info/info-kiso-de.html
+++ b/public/templates/info/info-kiso-de.html
@@ -1,4 +1,77 @@
 <div class='container'>
+	<h2><strong>Neue Infos zum KiSo – Kindersommer 2020 Covid-19</strong></h2>
+	<img src="./../../../../assets/kiso2020.png" style="height:500px;float:left;margin-right:15px" />
+	<ul>
+		<li>
+		<div>Halbtägige Betreuung von 8.00 bis 13.00 Uhr (bei Bedarf ab 7.45) oder von 14.00 bis 18.30 Uhr<br />
+			 Eintrittszeiten: 7.45-8.30 / 14.00-14.30 h Abholzeiten: 12.30-13.00 / 18.00-18.30 Uhr</div>	
+		</li>
+		<li>Gruppen zu je 7 Kindern mit zwei Betreuer*innen im Zentrum Maria Heim und bei Bedarf in einer nahe gelegenen Struktur</li>
+		<li>Verpflegung: ergiebige Jause sowohl am Vor- als auch am Nachmittag (im Teilnahmebeitrag inbegriffen)</li>
+		<li>Der Teilnahmebeitrag pro Woche wird auf 50 € reduziert, für Geschwisterkinder derselben Woche 45 €. Die erste Woche kostet für alle 30€. Wir bitten Sie den Teilnahmebeitrag <strong>bis Freitag, 5. Juni</strong> auf unser Konto zu überweisen:<br /><strong>Raiffeisenkasse Bozen IBAN: IT 58 J 08081 11600 000305003229</strong><br />Grund der Überweisung: KISO 2020-COVID 19, Woche/n und Namen des Kindes</li>
+		<li>Tägliches Infrarot-Fiebermessen vor Ort (zu Beginn)</li>
+		<li>Konforme Schutzausrüstung (Stoffmaske) muss von den Teilnehmer*innen mitgebracht werden.</li>
+		<li>Der Abstand von 2 Metern (ohne Maske) bzw. 1 Meter (mit Maske) ist in jedem Falle einzuhalten. Aktivitäten und Spiele werden entsprechend angepasst (wir werden unserer Kreativität freien Lauf lassen)</li>
+		<li>Regelmäßige Desinfektion der sanitären Oberflächen seitens des KiSo-Personals</li>
+		<li><strong>Anmeldeschluss:</strong> Die Anmeldungen sind bis <strong>Dienstag, 2. Juni 2020</strong> möglich. Melden Sie Ihr Kind bitte nur für den Vormittag ODER Nachmittag an.</li>
+	</ul>
+	<p>Es besteht die Möglichkeit, dass es in den nächsten Wochen zu einigen Lockerungen der Richtlinien kommen könnte. Wir werden vor KiSo-Beginn eine weitere Mitteilung mit den aktuellsten Informationen schicken, u.a. was die Kinder alles mitbringen sollen und welche Unterlagen notwendig sind.</p>
+
+	<h2><strong>Neue Infos zu Summer Weeks 2020 Covid-19</strong></h2>
+	<p>Für 11- bis 15-Jährige aller Muttersprachen.<br />
+	   Das Programm wird in deutscher Sprache angeboten, somit werden genügend Grundkenntnisse der deutschen Sprache vorausgesetzt.</p>
+    <ul>
+		<li>Halbtägiger Workshop von <strong>8.30 bis 13.30</strong> Uhr (Ausnahme: Abenteuer Mathematik bis 13.00 Uhr)</li>
+		<li>Gruppen zu max. je 10 Kindern im Jugendzentrum papperlapapp, Pfarrplatz 24, Bozen</li>
+		<li>Verpflegung: Kein gekochtes Mittagessen, aber großes Lunchpaket</li>
+		<li>Der Teilnahmebeitrag pro Woche 80 Euro bzw. 70 Euro für das 2. Kind derselben Woche muss bis <strong>Freitag, 12. Juni</strong> auf unser Konto überwiesen werden:<br />
+			Raiffeisenkasse Bozen IBAN: IT 58 J 08081 11600 000305003229<br />
+			Grund der Überweisung: SUMMER 2020-COVID 19, Woche/n und Namen des Kindes</li>
+		<li>Tägliches Infrarot-Fiebermessen vor Ort (zu Beginn)</li>
+		<li>Konforme Schutzausrüstung (Stoffmaske) muss von den Teilnehmer*innen mitgebracht werden.</li>
+		<li>Der Abstand von 2 Metern (ohne Maske) bzw. 1 Meter (mit Maske) ist in jedem Falle einzuhalten. Aktivitäten und Spiele werden entsprechend angepasst.</li>
+		<li>Regelmäßige Desinfektion der sanitären Oberflächen seitens des KiSo-Personals</li>
+		<li><strong>Anmeldeschluss:</strong> Die Anmeldungen gehen bis <strong>Mittwoch, 10. Juni 2020</strong> auf <a href="www.KISO.bz.it">www.KISO.bz.it</a></li>
+	</ul>
+
+	<h2>Programm</h2>
+
+	<h3>Gaming Week</h3>
+	<img src="./../../../../assets/kiso_gaming.png" style="height:110px;float:left;margin-right:15px" />
+	<h4>Hannes Waldner</h4>
+	<p>Eine Woche ganz im Zeichen des Videospiels. Es wird nicht nur gemeinsam gezockt, sondern wir tauchen tiefer in die Virtual Reality ein und beschäftigen uns anhand unterschiedlicher pädagogischer Methoden mit dem Medium „Videospiel“ an sich. Was steckt alles dahinter? Was macht ein gutes Videospiel aus? Welche Rollen nehmen wir dabei ein? Let’s play!</p>
+    <p>Zeitraum: 6. bis 10. Juli 2020</p>
+	<br />
+	<h3>Abenteuer Mathematik</h3>
+	<img src="./../../../../assets/kiso_math.png" style="height:110px;float:left;margin-right:15px" />
+	<h5>Andi Scartezzini &amp; Harald Niederseer</h5>
+	<p>Eine Woche lang einen neuen und spannenden Zugang zur Welt der Mathematik entdecken. Für alle die Mathematik lieben, aber auch eine neue Chance für diejenigen, die sagen &quot;in Mathe bin ich schlecht&quot; oder &quot;Mathe ist blöd&quot;!</p>
+	<p>Zeitraum: 13. bis 17. Juli 2020</p>
+	<br />
+	<h3>Theater Workshop</h3>
+	<img src="./../../../../assets/kiso_photo.jpg" style="height:110px;float:left;margin-right:15px" />
+	<h4>Miriam Dreher &amp; Nadja Tröster</h4>
+	<p>Du findest Schauspielen spannend und möchtest dich gerne auf einer Bühne ausprobieren? Du hast Lust auf Austausch mit gleichgesinnten Kids und möchtest lernen, wie man die eigenen Geschichten kreativ darstellen und ein selbst erfundenes Theaterstück auf die Beine stellen kann? Auf dich wartet eine Menge Spaß!</p>
+	<p>Zeitraum: 20. bis 24. Juli 2020</p>
+	<br />
+	<h3>Film &amp; Hip Hop</h3>
+	<img src="./../../../../assets/kiso_dance.png" style="height:110px;float:left;margin-right:15px" />
+	<h4>Valentina Bagnis &amp; Willy Theil</h4>
+	<p>Du brennst für Musik, interessierst dich für Film oder tanzt und schauspielst gerne? Hast Lust bei einem Musikvideo von der Idee bis zum fertigen Schnitt mit dabei zu sein? Würdest mal gerne vor oder hinter der Kamera stehen? Lernst gerne neue Leute kennen und möchtest mal mehr als nur ein TikTok Video drehen? Dann bist du hier genau richtig! Der Fantasie sind hier keine Grenzen gesetzt.</p>
+	<p>Zeitraum: 27. bis 31. Juli 2020 bzw. 3. August bis 7. August</p>
+	<br />
+	<br />
+    <h4>Anmeldung:</h4>
+	<p>Für Fragen: michael.hofer@jd.bz.it, 3402832479</p>
+
+	<img src="./../../../../assets/logo-jungschar.png" style="vertical-align:bottom;height:50px;margin-left:15px" />
+	<img src="./../../../../assets/raika.png" style="vertical-align:bottom;height:70px;margin-left:15px" />
+	<img src="./../../../../assets/familienagentur.png" style="vertical-align:bottom;height:150px;margin-left:15px" />
+	<img src="./../../../../assets/stadt_bozen.jpg" style="vertical-align:bottom;height:70px;margin-left:15px; margin-bottom:30px" />
+	<img src="./../../../../assets/Kiso_papperlapapp.jpg" style="vertical-align:bottom;height:90px;margin-left:15px; margin-bottom:30px" />
+</div>
+
+<!-- <div class='container'>
 	<h2><strong>KiSo – Kindersommer 2020</strong></h2>
 	<img src="./../../../../assets/kiso2020.png" style="height:500px;float:left;margin-right:15px" />
 	<h4>Wer darf daran teilnehmen</h4>
@@ -27,8 +100,7 @@
 	<p>Alle Eltern und Erziehungsberechtigten dürfen nur die eigenen Kinder einschreiben</p>
 	<p>Das Kind muss bereits die erste Klasse Grundschule besucht haben (Ausnahme: Geschwisterkinder, die das letzte Kindergartenjahr besucht haben)<br />Die Anmeldung ist verbindlich, wenn Sie die schriftliche Bestätigung des Jugenddienstes Bozen erhalten haben</p>
 	<p><strong>Bitte lesen Sie sich aufmerksam die Allgemeinen Geschäftsbedingungen (AGB’s) durch!</strong></p>
-	<!--<adress style="font-style:italic"><mark>Jugenddienst Bozen</mark><br />Pfarrplatz 24, piazza Parrocchia<br />39100 Bozen/Bolzano<br />0471 972098 (15.00-18.30 h)<br /><a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a></adress><br />
-	<img src="./../../../../assets/jdb.png" style="vertical-align:bottom;height:110px;margin-left:15px" />-->
+	
 	<br />
 	<br />
 	<h2><strong>Summer weeks</strong></h2>
@@ -77,4 +149,4 @@
 	<img src="./../../../../assets/familienagentur.png" style="vertical-align:bottom;height:150px;margin-left:15px" />
 	<img src="./../../../../assets/stadt_bozen.jpg" style="vertical-align:bottom;height:70px;margin-left:15px; margin-bottom:30px" />
 	<img src="./../../../../assets/Kiso_papperlapapp.jpg" style="vertical-align:bottom;height:90px;margin-left:15px; margin-bottom:30px" />
-</div>
+</div> -->
