--- a/public/templates/info/info-kiso-it.html
+++ b/public/templates/info/info-kiso-it.html
@@ -1,4 +1,78 @@
 <div class='container'>
+	
+	<h2><strong>Nuove informazioni sul KiSo – Kindersommer Covid-19</strong></h2>
+	<img src="./../../../../assets/kiso2020.png" style="height:500px;float:left;margin-right:15px" />
+	<ul>
+		<li>
+		<div>assistenza di mezza giornata dalle 8.00 alle 13.00 (7.45 se necessario) o dalle 14.00 alle 18.30
+			Orari di ingresso: 7.45-8.30 / 14.00-14.30 h Orari di ritiro: 12.30-13.00 / 18.00-18.30 Uhr</div>	
+		</li>
+		<li>gruppi di 7 bambini con due accompagnatori/accompagnatrici ciascuno nel centro Maria Heim e, se necessario, in una struttura vicina</li>
+		<li>pensione: ricco spuntino al mattino ovv. al pomeriggio (incluso nella quota di iscrizione).</li>
+		<li>la quota di partecipazione a settimana è ridotta a 50 €, per i fratelli della stessa settimana 45€. Per la prima settimana è 30€ per tutti. Vi chiediamo di versare la nuova quota d’iscrizione sul nostro conto entro il <strong>venerdì 5 giugno:</strong><br /><strong>Banca Rurale di Bolzano IBAN: IT 58 J 08081 11600 000305003229</strong><br />Motivo del versamento: KISO 2020-COVID 19, settimane e nome del/la bambina/o</li>
+		<li>misurazione giornaliera della febbre sul posto con termometro a infrarossi (all&#39;inizio)</li>
+		<li>i partecipanti devono portare il proprio equipaggiamento di protezione (maschera)</li>
+		<li>la distanza di 2 metri (senza maschera) o 1 metro (con maschera) deve essere mantenuta in ogni caso. Le attività e i giochi saranno adattati di conseguenza (daremo libero sfogo alla nostra creatività)</li>
+		<li>la regolare disinfezione delle superfici sanitarie da parte del personale KiSo</li>
+		<li><strong>termine per l’iscrizione:</strong> Vi preghiamo di iscrivere i figli / le figlie al KiSo per la mattina
+			OPPURE il pomeriggio entro <strong>martedì 2 giugno 2020</strong></li>
+	</ul>
+	<p>È possibile che nelle prossime settimane ci sia qualche alleggerimento della legge iniziale. Invieremo un&#39;altra mail prima che il KiSo inizi con le informazioni più recenti, compreso ciò che i bambini devono portare e quali documenti sono necessari.</p>
+
+	<h2><strong>Nuove informazioni sulle Summer Weeks 2020 Covid-19</strong></h2>
+	<p>Per i ragazzi dagli 11 ai 15 anni di tutte le madrilingue. Il programma è offerto in tedesco, per cui è richiesta una sufficiente conoscenza di base della lingua tedesca.</p>
+    <ul>
+		<li>Workshop di mezza giornata dalle ore <strong>8.30 alle 13.30</strong> (eccezione: Abenteuer Mathematik fino alle 13.00)</li>
+		<li>gruppi di massimo 10 bambini nel centro giovanile papperlapapp, Pfarrplatz 24, Bolzano</li>
+		<li>Cibo: Niente pranzo cucinato, ma una grande merenda</li>
+		<li>la quota di partecipazione a settimana 80 Euro o 70 Euro per il 2° figlio della stessa settimana deve essere trasferita sul nostro conto entro <strong>venerdì 12 giugno:</strong><br />
+			Banca Raiffeisen Bank Bozen IBAN: IT 58 J 08081 11600 000305003229<br />
+			Motivo del trasferimento: BUZZER 2020-COVIDENTE 19, settimana/e e nome del bambino</li>
+		<li>misurazione giornaliera della febbre infrarossa sul posto (all&#39;inizio)</li>
+		<li>i partecipanti devono portare una loro maschera in tessuto</li>
+		<li>la distanza di 2 metri (senza maschera) o 1 metro (con maschera) deve essere mantenuta in ogni caso. Le attività e i giochi saranno adattati.</li>
+		<li>disinfezione regolare delle superfici sanitarie da parte del personale KiSo</li>
+		<li><strong>termine per l&#39;iscrizione:</strong> le iscrizioni saranno accettate fino a <strong>mercoledì 10 giugno 2020</strong> sul sito <a href="www.KISO.bz.it">www.KISO.bz.it</a></li>
+	</ul>
+
+	<h2>Programma</h2
+
+	<br />
+	<h3>Gaming Week</h3>
+	<img src="./../../../../assets/kiso_gaming.png" style="height:110px;float:left;margin-right:15px" />
+	<h4>Hannes Waldner</h4>
+	<p>Una settimana dedicata al videogioco. Non solo giocheremo insieme, ma ci immergeremo anche nella realtà virtuale ed esploreremo il mezzo culturale dei &quot;videogames&quot; in generale, utilizzando vari metodi pedagogici. Cosa c&#39;è dietro questi mondi di pixel? Cosa rende un buon videogioco? Quali sono i ruoli che assumiamo come giocatori? Let’s play!</p>
+	<p>Periodo: dal 6 al 10 luglio 2020</p>
+	<br />
+	<h3>Abenteuer Mathematik</h3>
+	<img src="./../../../../assets/kiso_math.png" style="height:110px;float:left;margin-right:15px" />
+	<h4>Andi Scartezzini &amp; Harald Niederseer</h4>
+	<p>In collaborazione con il centro giovanile papperlapapp.</p>
+	<p>Scoprite un nuovo ed entusiasmante approccio alla matematica per una settimana. Per tutti coloro che amano la matematica, ma anche una nuova opportunità per chi dice &quot; in matematica sono una schiappa &quot; o &quot;la matematica fa schifo&quot;!</p>
+	<p>Periodo: dal 13 al 17 luglio 2020</p>
+	<br />
+	<h3>Theater Workshop</h3>
+	<img src="./../../../../assets/kiso_photo.jpg" style="height:110px;float:left;margin-right:15px" />
+	<h4>Miriam Dreher &amp; Nadja Tröster</h4>
+	<p>Ti piace fare l’attore/l’attrice e vuoi scambiarti con altri ragazzi che condividono la tua passione? Vuoi imparare a presentare le tue storie in modo creativo sul palcoscenico e a mettere in scena un&#39;opera teatrale fatta da te stesso sotto la guida di un professionista? Ti aspetta un sacco di divertimento!</p>
+	<p>Periodo: dal 20 al 24 luglio 2020</p>
+	<br />
+	<h3>Film &amp; Hip Hop</h3>
+	<img src="./../../../../assets/kiso_dance.png" style="height:110px;float:left;margin-right:15px" />
+	<h4>Valentina Bagnis &amp; Willy Theil</h4>
+	<p>Ti piace la musica, ti interessa il cinema o ti piace ballare e recitare? Ti piacerebbe far parte di un video musicale dall&#39;idea al taglio finale? Vuoi stare davanti o dietro la telecamera? Ti piace incontrare nuove persone e vuoi creare qualcosa di più che un semplice video TikTok? Allora è il posto giusto per te! Non ci sono limiti alla tua fantasia.</p>
+	<p>Periodo: dal 27 al 31 luglio 2020 ovv. 3 agosto al 7 agosto</p>
+	<br />
+	<p>Per domande: michael.hofer@jd.bz.it, 3402832479</p>
+
+	<img src="./../../../../assets/logo-jungschar.png" style="vertical-align:bottom;height:50px;margin-left:15px" />
+	<img src="./../../../../assets/raika.png" style="vertical-align:bottom;height:70px;margin-left:15px" />
+	<img src="./../../../../assets/familienagentur.png" style="vertical-align:bottom;height:150px;margin-left:15px" />
+	<img src="./../../../../assets/stadt_bozen.jpg" style="vertical-align:bottom;height:70px;margin-left:15px; margin-bottom:30px" />
+	<img src="./../../../../assets/Kiso_papperlapapp.jpg" style="vertical-align:bottom;height:90px;margin-left:15px; margin-bottom:30px" />
+</div>
+
+<!--<div class='container'>
 	<h2><strong>KiSo – Kindersommer 2020</strong></h2>
 	<img src="./../../../../assets/kiso2020.png" style="height:500px;float:left;margin-right:15px" />
 	<h4>Chi può partecipare:</h4>
@@ -25,8 +99,6 @@
 	<p>I genitori possono iscrivere solo i propri figli.</p>
 	<p>Il bambino deve aver già frequentato la prima elementare (eccezione: fratelli minori che hanno concluso l’ultimo anno di scuola materna).</p>
 	<p><strong>Si prega di leggere attentamente le nostre condizioni generali.</strong></p>
-	<!-- <adress style="font-style:italic"><mark>Jugenddienst Bozen</mark><br />Pfarrplatz 24, piazza Parrocchia<br />39100 Bozen/Bolzano<br />0471 972098 (15.00-18.30 h)<br /><a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a></adress><br />
-	<img src="./../../../../assets/jdb.png" style="vertical-align:bottom;height:110px;margin-left:15px" /> -->
 	<br />
 	<br />
 	<h2><strong>Summer Weeks per ragazzi</strong></h2>
@@ -73,4 +145,4 @@
 	<img src="./../../../../assets/familienagentur.png" style="vertical-align:bottom;height:150px;margin-left:15px" />
 	<img src="./../../../../assets/stadt_bozen.jpg" style="vertical-align:bottom;height:70px;margin-left:15px; margin-bottom:30px" />
 	<img src="./../../../../assets/Kiso_papperlapapp.jpg" style="vertical-align:bottom;height:90px;margin-left:15px; margin-bottom:30px" />
-</div>
+</div>-->
