--- a/public/templates/registration/registrationEdit.html
+++ b/public/templates/registration/registrationEdit.html
@@ -105,7 +105,28 @@
 		<div class='col-sm-8'>
 			<input type='text' name='healthIllnes' ng-model='healthIllnes' maxlength='100' class='form-control'></input>
 		</div>
-    </div>
+	</div>
+	<!-- HASDISABILITY -->
+	<div class='col-sm-offset-2 col-sm4 form-group'>
+		<label for='hasDisability' class='control-label col-sm-2'> Beeinträchtigung</label>
+		<div class='col-sm-8'>
+			<input type='checkbox' name='hasDisability' ng-model='hasDisability'></input>
+		</div>
+	</div>
+	<!-- DISABILITY DESCRIPTION -->
+	<div ng-show='hasDisability' class='form-group' ng-class='{ "has-error": registrationForm.disabilityDescription.$invalid }'>
+		<label for='disabilityDescription' class='control-label col-sm-2'>Diagnose Beeinträchtigung</label>
+		<div class='col-sm-10'>
+			<input name='disabilityDescription' type='text' ng-model='disabilityDescription' class='form-control'></input>
+		</div>
+	</div>
+	<!-- PREFERREDFELLOW -->
+	<div ng-show='platform.isJugendsommer() || platform.isTest()' class='form-group' ng-class='{ "has-error": registrationForm.preferredFellow.$invalid }'>
+		<label for='preferredFellow' class='control-label col-sm-2'>{{"RESERVATION.LABEL_PREFERRED_FELLOW" | translate}}</label>
+		<div class='col-sm-8'>
+			<input name='preferredFellow' type='text' ng-model='preferredFellow' class='form-control' maxlenght='100'></input>
+		</div>
+	</div>
 	<!-- ADDRESSCHILD -->
 	<div class='form-group' ng-class='{ "has-error": registrationForm.addressChild.$invalid }'>
 		<label for='addressChild' class='control-label col-sm-2'>Adresse</label>
@@ -144,17 +165,6 @@
 	<!-- NEEDSEBK -->
 	<div class='col-sm-offset-2 col-sm4'>
 		<input type='checkbox' name='needsEbk' ng-model='needsEbK'><strong>  Ebk</input>
-	</div>
-	<!-- HASDISABILITY -->
-	<div class='col-sm-offset-2 col-sm4'>
-			<input type='checkbox' name='hasDisability' ng-model='hasDisability'><strong>  Beeinträchtigung</input>
-	</div>
-	<!-- DISABILITY DESCRIPTION -->
-	<div class='form-group' ng-class='{ "has-error": registrationForm.disabilityDescription.$invalid }'>
-		<label for='disabilityDescription' class='control-label col-sm-2'>Diagnose Beeinträchtigung</label>
-		<div class='col-sm-10'>
-			<input name='disabilityDescription' type='text' ng-model='disabilityDescription' class='form-control'></input>
-		</div>
 	</div>
 	<br />
 	<div class="panel panel-default">
