--- a/public/templates/myRegistrations.html
+++ b/public/templates/myRegistrations.html
@@ -20,7 +20,12 @@
 			<th>{{"MYRESERVATION.LABEL_MAIL_PARENT" | translate}}</th>
 			<th>{{"MYRESERVATION.LABEL_TEL_PARENT" | translate}}</th>
 			<th></th>
-			<th>{{"MYRESERVATION.LABEL_DOWNLOAD_CONFIRMATION" | translate }}</th>
+			<th>{{"MYRESERVATION.LABEL_DOWNLOAD_CONFIRMATION" | translate }}
+				<div class='btn-group' role='group' ng-show='(platform.isJDUL()  || platform.isTest())'>
+					<button type="button" ng-class='{"btn-info": confirmationLang == "de"}' class="btn btn-default btn-xs" ng-click="setConfirmationLang('de')">de</button>
+					<button type="button" ng-class='{"btn-info": confirmationLang == "it"}' class="btn btn-default btn-xs" ng-click="setConfirmationLang('it')">it</button>
+				</div>
+			</th>
 			<!--<th ng-show='platform.isJDUL() || platform.isTest()'></th>-->
 		</tr>
 		<tr ng-repeat='reg in registrations | filter:filterReport(reg) | orderBy:colNameSort'>
@@ -37,7 +42,10 @@
 			<td><a href='mailto:{{reg.emailParent}}'>{{reg.emailParent}}</a></td>
 			<td>{{reg.phoneNumberParent}}</td>
 			<td><a href='/#/editOwnRegistration/{{reg._id}}' class="btn btn-success btn-small glyphicon glyphicon-pencil" type="button"><div style="font-size: 60%"><br />Editieren</div></a></td>
-			<td><button  ng-class='{"disabled": !reg.isPaymentDone}' class="btn btn-info btn-small glyphicon glyphicon-file" type="button" ng-click="downloadConfirmation(reg._id)"><div style="font-size:60%"><br />Download</div></button></td>
+			<td ng-show='!(platform.isJDUL() || platform.isTest())'><button  ng-class='{"disabled": !reg.isPaymentDone}' class="btn btn-info btn-small glyphicon glyphicon-file" type="button" ng-click="downloadConfirmation(reg._id, 'de')"><div style="font-size:60%"><br />Download</div></button></td>
+			<td ng-show='(platform.isJDUL()  || platform.isTest())'>
+				<button  ng-class='{"disabled": !reg.isPaymentDone}' class="btn btn-info btn-small glyphicon glyphicon-file" type="button" ng-click="downloadConfirmation(reg._id, confirmationLang)"><div style="font-size:60%"><br />Download</div></button>
+			</td>
 
 			<!--<td ng-show='platform.isJDUL() || platform.isTest()'><button type="button" class="btn glyphicon glyphicon-trash" ng-click='deleteRegistration(reg._id)'></button></td>-->
 		</tr>
