--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -85,6 +85,20 @@
 								<input name='lastNameChild' type='text' ng-model='lastNameChild' ng-disabled="disabledForSibling" class='form-control' required maxlenght='100'></input>
 							</div>
 						</div>
+						<!-- GENDER -->
+						<div class='form-group' ng-class='{ "has-error": registrationForm.gender.$invalid }'>
+							<label for='genderChild' class='control-label col-sm-2'>{{"RESERVATION.LABEL_GENDER_CHILD" | translate}}</label>
+							<div class='col-sm-8'>
+									<select ng-show='lang === "de"' name='genderChild' class='sel-base form-control' ng-model='gender'>
+										<option value='female'>weiblich</option>
+										<option value='male'>männlich</option>
+									</select>
+									<select ng-show="lang === 'it'" name='genderChild' class='sel-base form-control' ng-model='gender'>
+										<option value='female'>feminile</option>
+										<option value='male'>maschile</option>
+									</select>
+							</div>
+						</div>
 						<!-- BIRTHDAYCHILD -->
 						<div class='form-group' ng-class='{ "has-error": registrationForm.birthdayChild.$invalid }'>
 							<label for='birthdayChild' class='control-label col-sm-2'>{{"RESERVATION.LABEL_BIRTHDAY_CHILD" | translate}}</label>
@@ -95,6 +109,13 @@
 								</p>
 							</div>
 						</div>
+						<!-- TAXNUMBER -->
+						<div class='form-group' ng-class='{ "has-error": registrationForm.taxNumber.$invalid }'>
+							<label for='lastNameChild' class='control-label col-sm-2'>{{"RESERVATION.LABEL_TAXNUMBER" | translate}}</label>
+							<div class='col-sm-8'>
+								<input name='taxNumberChild' type='text' ng-model='taxNumber' class='form-control' maxlenght='100'></input>
+							</div>
+						</div>	
 						<!-- SCHOOLCHILD -->
 						<div class='form-group' ng-class='{ "has-error": registrationForm.schoolChild.$invalid }'>
 							<label for='schoolChild' class='control-label col-sm-2'>{{"RESERVATION.LABEL_SCHOOL_CHILD" | translate}}</label>
