--- a/public/templates/report.html
+++ b/public/templates/report.html
@@ -316,8 +316,8 @@
 		<tr ng-repeat='reg in registrations | orderBy:[colNameSort,colNameSort2]'>
 			<td>{{reg.activityId.eventId.location}} - {{reg.activityId.eventId.name}}</td>
 			<td>{{reg.activityId.name}}</td>
-			<td>{{reg.firstNameChild}}</td>
-			<td>{{reg.lastNameChild}}</td>
+			<td>{{reg.firstNameChild.toUpperCase()}}</td>
+			<td>{{reg.lastNameChild.toUpperCase()}}</td>
 			<td>{{formatBool(reg.needsEbK)}}</td>
 			<td ng-class='{"bg-success": reg.isPaymentDone, "bg-danger": !reg.isPaymentDone}'><input type='checkbox' ng-model='reg.isPaymentDone' ng-change='updateIsPaymentDone(reg._id, reg.isPaymentDone)' style='margin-right:8px' />{{formatBool(reg.isPaymentDone)}}</td>
 			<td ng-class='{"bg-success": reg.isEmailNotified, "bg-danger": !reg.isEmailNotified}'><input type='checkbox' ng-model='reg.isEmailNotified' ng-change='updateIsEmailNotified(reg._id, reg.isEmailNotified)' style='margin-right:8px' />{{formatBool(reg.isEmailNotified)}}</td>
