--- a/public/templates/info/faq-kiso-de.html
+++ b/public/templates/info/faq-kiso-de.html
@@ -1,7 +1,7 @@
 <div class='container'>
     <h2 class='orange'>Wichtige FAQs zu den Anmeldemodalitäten</h2>
     
-    <button class="btn btn-default" type="button" data-toggle="collapse" data-target="#collapse1" aria-expanded="false" aria-controls="collapseExample">
+    <!--<button class="btn btn-default" type="button" data-toggle="collapse" data-target="#collapse1" aria-expanded="false" aria-controls="collapseExample">
         Ab wann kann ich mein Kind anmelden?  <span class="caret"></span>
     </button>
     <div class="collapse" id="collapse1">
@@ -76,4 +76,5 @@
     In Ihrem User-Account können Sie unter dem Menüfeld <button class="btn">{{'NAV.MYRES' | translate}}</button> den Status Ihrer getätigten Anmeldungen einsehen. Sobald in der Spalte „bezahlt“ ein Kreuzchen aufscheint, ist Ihre Zahlung gebucht und die Anmeldung somit rechtsgültig. BITTE KONTAKTIEREN SIE UNS ERST, WENN NACH FÜNF WERKTAGEN AB ZAHLUNGSDATUM KEIN ENTSPRECHENDES KREUZCHEN AUFSCHEINT!
     </div>
     </div>
+-->
 </div>
