--- a/public/templates/info/info-kiso-de.html
+++ b/public/templates/info/info-kiso-de.html
@@ -1,4 +1,7 @@
 <div class='container'>
+	<h2><span  ng-show="lang == 'de'" class="label label-default">Anmeldestart: 02. März 2021, 19.00 Uhr!</span></h2>
+</div>
+<!--<div class='container'>
 	<h2><strong>Neue Infos zum KiSo – Kindersommer 2020 Covid-19</strong></h2>
 	<img src="./../../../../assets/kiso2020.png" style="height:500px;float:left;margin-right:15px" />
 	<ul>
@@ -70,6 +73,7 @@
 	<img src="./../../../../assets/stadt_bozen.jpg" style="vertical-align:bottom;height:70px;margin-left:15px; margin-bottom:30px" />
 	<img src="./../../../../assets/Kiso_papperlapapp.jpg" style="vertical-align:bottom;height:90px;margin-left:15px; margin-bottom:30px" />
 </div>
+-->
 
 <!-- <div class='container'>
 	<h2><strong>KiSo – Kindersommer 2020</strong></h2>
