--- a/public/templates/events.html
+++ b/public/templates/events.html
@@ -66,8 +66,8 @@
 					</div>
 				</div>
 				<div class='col-sm-9'>
-					<strong ng-show="lang == 'de'">{{event.location}} - {{event.name}}</strong>
-					<strong ng-show="lang == 'it'">{{event.location_it}} - {{event.name_it}}</strong>
+					<strong ng-show="lang == 'de'"><div ng-show="!platform.isJugendsommer()">{{event.location}} - </div>{{event.name}}</strong>
+					<strong ng-show="lang == 'it'"><div ng-show="!platform.isJugendsommer()">{{event.location_it}} - </div>{{event.name_it}}</strong>
 					<div class='text-info'>{{event.startDate | date: 'dd/MM/yyyy'}} - {{event.endDate | date: 'dd/MM/yyyy'}}</div>
 					<p ng-show="lang == 'de'">{{event.description}}</p>
 					<p ng-show="lang == 'it'">{{event.description_it}}</p>
