--- a/public/templates/info/faq-kiso-it.html
+++ b/public/templates/info/faq-kiso-it.html
@@ -1,7 +1,7 @@
 <div class='container'>
     <h2 class='orange'>Importanti FAQ sulle modalità di iscrizione</h2>
     
-    <button class="btn btn-default" type="button" data-toggle="collapse" data-target="#collapse10" aria-expanded="false" aria-controls="collapseExample">
+    <!--<button class="btn btn-default" type="button" data-toggle="collapse" data-target="#collapse10" aria-expanded="false" aria-controls="collapseExample">
         Quando posso iscrivere mio figlio?  <span class="caret"></span>
     </button>
     <div class="collapse" id="collapse10">
@@ -75,4 +75,5 @@
     <div class="well">
     Nel vostro conto utente potete verificare lo stato delle vostre iscrizioni sotto il campo del menu <button class="btn">{{'NAV.MYRES' | translate}}</button> Non appena appare una croce nella colonna &quot;pagato&quot;, il vostro pagamento è stato contabilizzato e l&#39;iscrizione è legalmente valida. VI PREGHIAMO DI CONTATTARCI SOLO SE DOPO CINQUE GIORNI LAVORATIVI DALLA DATA DEL PAGAMENTO NON COMPARE NESSUNA CROCE!
     </div>
+-->
 </div>
