--- a/public/templates/info/info-kiso-it.html
+++ b/public/templates/info/info-kiso-it.html
@@ -1,4 +1,7 @@
 <div class='container'>
+	<h2><span  ng-show="lang == 'it'" class="label label-default">Partenza iscrizioni: 02 marzo 2021, ore 19.00!</span></h2>
+</div>
+<!--<div class='container'>
 	
 	<h2><strong>Nuove informazioni sul KiSo – Kindersommer Covid-19</strong></h2>
 	<img src="./../../../../assets/kiso2020.png" style="height:500px;float:left;margin-right:15px" />
@@ -71,7 +74,7 @@
 	<img src="./../../../../assets/stadt_bozen.jpg" style="vertical-align:bottom;height:70px;margin-left:15px; margin-bottom:30px" />
 	<img src="./../../../../assets/Kiso_papperlapapp.jpg" style="vertical-align:bottom;height:90px;margin-left:15px; margin-bottom:30px" />
 </div>
-
+-->
 <!--<div class='container'>
 	<h2><strong>KiSo – Kindersommer 2020</strong></h2>
 	<img src="./../../../../assets/kiso2020.png" style="height:500px;float:left;margin-right:15px" />
