--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -110,7 +110,7 @@
 							</div>
 						</div>
 						<!-- TAXNUMBER -->
-						<div class='form-group' ng-class='{ "has-error": registrationForm.taxNumber.$invalid }'>
+						<div ng-hide='platform.isJDUL()' class='form-group' ng-class='{ "has-error": registrationForm.taxNumber.$invalid }'>
 							<label for='lastNameChild' class='control-label col-sm-2'>{{"RESERVATION.LABEL_TAXNUMBER" | translate}}</label>
 							<div class='col-sm-8'>
 								<input name='taxNumberChild' type='text' ng-model='taxNumber' class='form-control' maxlenght='100'></input>
@@ -234,12 +234,12 @@
 							<input type='checkbox' name='canGoHomeAllone' ng-model='canGoHomeAllone'><strong>  {{"RESERVATION.LABEL_CANGOHOME_CHILD" | translate}}</input>
 						</div>
 						<!-- PREFERREDFELLOW -->
-						<div ng-show='platform.isJugendsommer()' class='form-group' ng-class='{ "has-error": registrationForm.preferredFellow.$invalid }'>
+						<!-- <div ng-show='platform.isJugendsommer()' class='form-group' ng-class='{ "has-error": registrationForm.preferredFellow.$invalid }'>
 							<label for='preferredFellow' class='control-label col-sm-2'>{{"RESERVATION.LABEL_PREFERRED_FELLOW" | translate}}</label>
 							<div class='col-sm-8'>
 								<input name='preferredFellow' type='text' ng-model='preferredFellow' class='form-control' maxlenght='100'></input>
 							</div>
-						</div>
+						</div> -->
 						<!-- NEEDSPRECARE -->
 						<!-- <div ng-show='!isKiso && (type === "summer" || type === "music")' class='col-sm-offset-2 col-sm4'>
 										<input type='checkbox' name='needsPreCare' ng-model='needsPreCare'><strong>{{"RESERVATION.LABEL_PRECARE_CHILD" | translate}}</input>
