--- a/public/templates/registration/registrationEdit.html
+++ b/public/templates/registration/registrationEdit.html
@@ -128,7 +128,7 @@
 		</div>
 	</div>
 	<!-- ADDRESSCHILD -->
-	<div class='form-group' ng-class='{ "has-error": registrationForm.addressChild.$invalid }'>
+	<div class='form-group' ng-class='{ "has-error": registrationForm.addressChild.$invalid }' ng-show="!platform.isJugendsommer()">
 		<label for='addressChild' class='control-label col-sm-2'>Adresse</label>
 		<div class='col-sm-10'>
 			<input name='addressChild' type='text' ng-model='addressChild' required maxlength='100' class='form-control'></input>
